@@ -13,7 +13,7 @@ AM_PROG_LIBTOOL
 
 AM_PATH_GLIB_2_0
 
-LM_COMPILE_WARNINGS
+IDT_COMPILE_WARNINGS
 
 changequote(,)dnl
 if test "x$GCC" = "xyes"; then
@@ -38,6 +38,11 @@ AC_SUBST(LIBTASN1_REQUIRED)
 LM_CHECK_TIMEZONE
 
 PKG_CHECK_MODULES(LOUDMOUTH, glib-2.0 >= $GLIB2_REQUIRED)
+
+# Check Unit test framework (defined in acinclude.m4)
+IDT_PATH_CHECK(0.9.2, have_check=yes, have_check=no)
+
+AM_CONDITIONAL(HAVE_CHECK, test x$have_check = xyes)
 
 dnl +--------------------+
 dnl | Check for gtk-doc. |-------------------------------
@@ -185,6 +190,7 @@ docs/Makefile
 docs/reference/Makefile
 loudmouth/Makefile
 examples/Makefile
+tests/Makefile
 loudmouth-1.0.pc
 loudmouth.spec])
 
@@ -198,6 +204,7 @@ echo "
         compiler:                 ${CC}
         Enable SSL                ${enable_ssl}
         Enable Debug:             ${enable_debug}
+	Enable Unit Tests:        ${have_check}
 
         Now type 'make' to build Loudmouth
 "
