@@ -1,0 +1,5 @@
+Makefile
+Makefile.in
+test-objects
+.deps
+.libs
